syntax = "proto3";
package provenance.msgfees.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/provenance-io/provenance/x/msgfees/types";

option java_package        = "io.provenance.msgfees.v1";
option java_multiple_files = true;

// Msg defines the msgfees Msg service.
service Msg {
  // AssessCustomMsgFee .
  rpc AssessCustomMsgFee(MsgAssessCustomMsgFeeRequest) returns (MsgAssessCustomMsgFeeResponse);
}

// MsgBindNameRequest defines an sdk.Msg type
message MsgAssessCustomMsgFeeRequest {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string                   name           = 1;
  cosmos.base.v1beta1.Coin amount         = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"amount\""];
  string                   holder_address = 3;
}

// MsgBindNameResponse defines the Msg/BindName response type.
message MsgAssessCustomMsgFeeResponse {}